[package]
name = "async-demo-1"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
crossbeam = "0.7"