[package]
name = "async-demo-2"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.11", features = ["full"]}
crossbeam = "0.7"
reqwest = "0.10.0-alpha.2"
rayon = "1.2.0"