[package]
name = "async-demo-2"
version = "0.1.0"
authors = ["Fuyang Liu <liufuyang@users.noreply.github.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.34.0", features = ["full"]}
crossbeam = "0.8"
reqwest = "0.11"
rayon = "1.8"