[package]
name = "atomics_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.34.0", features = ["full"]}

[[example]]
name = "spin_lock"
path = "spin_lock_example.rs"

[[example]]
name = "channel"
path = "channel_example.rs"

[[example]]
name = "test1"
path = "test1.rs"
