[package]
name = "atomics_book"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.34.0", features = ["full"]}
atomic-wait = "1.1.0"

[[example]]
name = "spin_lock"
path = "examples/spin_lock_example.rs"

[[example]]
name = "my_mutex"
path = "examples/my_mutex_example.rs"

[[example]]
name = "channel"
path = "examples/channel_example.rs"

[[example]]
name = "x86_work_but_not_arm_demo"
path = "examples/x86_work_but_not_arm_demo.rs"

[[example]]
name = "test1"
path = "examples/test1.rs"
